--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Great Indian Gurukul</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png">
-    <link rel="manifest" href="images/x-icon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png"-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png"-->
+    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png"-->
+    <!--link rel="manifest" href="images/x-icon/site.webmanifest"-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+            <img src="images/x-icon/favicon-16x16.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
@@ -30,18 +30,18 @@
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/CodeCats10k"
+            href="https://twitter.com/GurukulGreat"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://hashaxis.com/"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.webp" alt="Opensea" />
+            <img src="images/header/hashaxis.png" alt="Opensea" />
           </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
@@ -55,10 +55,10 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="Feb 20, 2022 4:00:00 PM UTC"
         >
           <li class="clock-item">
-            <span class="count-number days">20</span>
+            <span class="count-number days">25</span>
             <p class="count-text">Days</p>
           </li>
 
