--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png"-->
+    <!--link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png"-->
     <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png"-->
-    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png"-->
+    <!--link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png"-->
     <!--link rel="manifest" href="images/x-icon/site.webmanifest"-->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -80,8 +80,8 @@
         <h1>NFT Drop Coming Soon!!</h1>
                
         <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+        <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>Join the Gurukul</span>
         </a>
       </div>
     </section>
