--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
+        <p>The OG set of 1000 NFTs of GIG project is releasing soon!!</p>
         <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Gurukul</span>
         </a>
