--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           >
             <img src="images/header/hashaxis.png" alt="Opensea" />
           </a>
-          <button class="wallet-btn btn" id="connectWallet">
+          <!--button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
-          </button>
+          </button-->
         </div>
       </div>
     </header>
