--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/"
+            href="https://discord.gg/BtmGJZG8N5"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -80,7 +80,7 @@
         <h1>NFT Drop Coming Soon!!</h1>
                
         <p>The OG set of 1000 NFTs of GIG project is releasing soon!!</p>
-        <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://discord.gg/BtmGJZG8N5" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Gurukul</span>
         </a>
       </div>
