--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <header>
+      <h1 align="center" style="font-size:40px;">Great Indian Gurukul</h1>
+      
       <div class="container">
         <div class="logo">
           <a href="/">
