--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://hashaxis.com/"
+            href="https://hashaxis.com/collection/61f24102a7cfc40015a61bd3"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -82,8 +82,9 @@
         <h1>NFT Drop Coming Soon!!</h1>
                
         <p>The OG set of 1000 NFTs of GIG project is releasing soon!!</p>
-        <a href="https://discord.gg/BtmGJZG8N5" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://hashaxis.com/collection/61f24102a7cfc40015a61bd3" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Gurukul</span>
+          <span>Mint on Hedera</span>
         </a>
       </div>
     </section>
