--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                
         <p>The OG set of 1000 NFTs of GIG project is releasing soon!!</p>
         <a href="https://hashaxis.com/collection/61f24102a7cfc40015a61bd3" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Gurukul</span>
-          <span>Mint on Hedera</span>
+          ><span>Join the Gurukul-</span>
+          <span>-Claim your Avatar on Hedera</span>
         </a>
       </div>
     </section>
