--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         </div>
         <div class="menu">
           <a
+            href="https://www.instagram.com/greatindiangurukul/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="images/header/insta.png" alt="Instagram" />
+          </a>
+          <a
             href="https://discord.gg/BtmGJZG8N5"
             target="_blank"
             rel="noopener noreferrer"
